--- a/backend/package.json
+++ b/backend/package.json
@@ -13,18 +13,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.1.0",
     "concurrently": "^8.2.2",
     "cookie-parser": "^1.4.6",
-    "cloudinary": "^2.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-async-handler": "^1.2.0",
+    "express-fileupload": "^1.5.0",
     "express-formidable": "^1.2.0",
+    "express-mongo-sanitize": "^2.2.0",
+    "express-rate-limit": "^7.2.0",
+    "helmet": "^7.1.0",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "picknshop": "file:",
+    "react-apexcharts": "^1.4.1",
+    "react-multi-carousel": "^2.8.5",
+    "uuid": "^9.0.1",
+    "xss-clean": "^0.1.4"
   }
 }
