--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "flutterwave-react-v3": "^1.3.2",
     "moment": "^2.30.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
